public/stylesheets/style.css
/* ... */
/* funding sources */
body.funding-sources.index a.action-bttn {
    background: #eee url(images/credit-card--plus.png) 0.8em center no-repeat scroll;
}
/* customers */
body.customers.index a.action-bttn {
    background: #eee url(images/user--plus.png) 0.8em center no-repeat scroll;
}
/* providers */
body.providers a.new-user {
    background: #eee url(images/user--plus.png) 0.8em center no-repeat scroll;
}
body.providers a.new-driver {
    background: #eee url(images/dashboard--plus.png) 0.8em center no-repeat scroll;
}
body.providers a.new-vehicle {
    background: #eee url(images/car--plus.png) 0.8em center no-repeat scroll;
}
body.providers a.new-provider {
    background: #eee url(images/plus.png) 0.8em center no-repeat scroll;
}
body.providers span.device-pool-color {
  display : block;
  width : 100px;
  height : 25px;
  border : 1px solid #CCC;
}
body.monthlies a.new-report {
    background: #eee url(images/report--plus.png) 0.8em center no-repeat scroll;
}
body.providers #region-form {
  float: left;
  width: 40%;
}
body.providers #region-form th,
body.providers #region-form td {
  padding: 0.7em 1em;
}
body.providers #region-preview {
  float: left;
  margin-left: 20px;
}
body.providers #region .hint {
  color: #606060;
  font-size: 90%;
  margin-left: 1em;
}
body.providers #region-preview {
  border: 1px solid #999;
  width: 400px;
}
body.providers #region-preview.error {
  color: #e5004d;
}

/*
 *
 * Color picker
 *
 */
fieldset ol.section li div.color_picker,
div.color_picker {
  height: 16px;
  width: 16px;
  padding: 0 !important;
  border: 1px solid #ccc;
  background: url(arrow.gif) no-repeat top right;
  cursor: pointer;
  line-height: 16px;
  margin-bottom : 5px;
}

div#color_selector {
  width: 110px;
  position: absolute;
  border: 1px solid #598FEF;
  background-color: #EFEFEF;
  padding: 2px;
  z-index : 1000;
}

div#color_custom {width: 100%; float:left }
div#color_custom label {font-size: 95%; color: #2F2F2F; margin: 5px 2px; width: 25%}
div#color_custom input {margin: 5px 2px; padding: 0; font-size: 95%; border: 1px solid #000; width: 65%; }

div.color_swatch {
  height: 12px;
  width: 12px;
  border: 1px solid #000;
  margin: 2px;
  float: left;
  cursor: pointer;
  line-height: 12px;
}

/*
 *
 * Runs
 *
 */
body.runs .wc-nav {
  margin-bottom : 20px;
}

body.runs #run_delete {
  float: right;
}

/*
 *
 * Trips
 *
 */
body.trips div.wc-toolbar {
  position : relative;
}

body.trips #page-header h1 {
  float: left;
}

body.trips #weekday_select {
  float: left;
}

body.trips #weekday_select p {
  margin: 0.6em 0 0.1em 1em;
  color: #0081cc;
  cursor: pointer;
}

body.trips #weekday_select_buttons {
  margin: 1em;
  width: 100%;
}

body.trips div.wc-toolbar div#vehicle_filter {
  position : absolute;
  right    : 50px;
  top      : 8px;
}

body.trips div.wc-toolbar div#expand_calendar {
  position : absolute;
  right    : 5px;
  top      : 5px;
}

body.trips div.wc-toolbar div#expand_calendar span.ui-icon {
  margin : -6px 0 0 -1px;
}

body.trips div.wc-cal-event {
  background-color : #A9CAF2;
  color : #000;
}

body.trips .wc-cal-event .wc-time {
  color : #000;
  background-color: #68A1E5;
  border: 1px solid #68A1E5;
}

body.trips div.repeats {
  padding: 5px;
  border: 1px solid #BBBBBB;
  border-radius: 5px;
}

body.trips div.repeats>li {
  margin-bottom: 0;
}
/*
 *
 * Dispatch
 *
 */
.dispatch #main {
 padding: 10px 1% 10px 1%;
 margin-bottom: 10px;
}

.dispatch #page-header h1 {
 float: left;
 width: 20%;
 margin: 0 1% 0 0;
}

.dispatch #page-header form {
 float: left;
 margin-top: -0.6em;
}

.dispatch input.hint {
 color: #909090;
}

.dispatch #address {
 height: 1.5em;
 width: 250px;
}

.dispatch #search-spinner {
 background-image: url(images/spinner.gif);
 display: block;
 float: right;
 margin: 4px 0 0 10px;
 height: 25px;
 width: 25px;
 visibility: hidden;
}

.dispatch #search-message {
 display: block;
 float: right;
 margin: 10px;
}

.dispatch div.search-results {
 background-color: #ffffff;
 border: 1px solid #a0a0a0;
 display: block;
 min-width: 300px;
 z-index: 100;
 position: absolute;
}

.dispatch .search-result {
 color: #0081cc;
 cursor: pointer;
 display: block;
 margin: 1em;
}

.dispatch .search-result:hover {
 color: #009ffb;
 text-decoration: underline;
}

.dispatch .search-result.selected {
 color: #000000;
 cursor: auto;
 text-decoration: none;
}

.dispatch .left_column {
 width: 20%;
 margin: 0 1% 0 0;
 float : left;
}

.dispatch #map-container {
 width : 79%;
 min-height : 300px;
}

.dispatch span.color {
 display : inline-block;
 width : 12px;
 height : 12px;
 border-radius : 6px;
 vertical-align : middle;
 border: 1px solid black;
}

.dispatch span.inactive {
 font-style : italic;
 color : #999;
}

.dispatch #refresh {
  clear      : left; 
}

.dispatch .marker_detail h3 {
  font-style: italic;
}

.dispatch .marker_detail h4 {
  font-weight: normal;
}

.dispatch #refresh {
  float: right;
  margin-top: -0.6em;
}

